--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,23 @@ php:
     - 5.5
     - 5.6
     - 7.0
+    - 7.1
     - nightly
     - hhvm
+
+env:
+ - SYMFONY_VERSION=2.8.*
+ - SYMFONY_VERSION=3.0.*
+ - SYMFONY_VERSION=3.1.*
+ - SYMFONY_VERSION=3.2.*
 
 branches:
     only:
         - master
         - /^\d+\.\d+$/
+        - update_monitor_to_use_swiftmailer
 
 matrix:
-    include:
-        - php: 5.5
-          env: SYMFONY_VERSION=2.8.*
     allow_failures:
         - php: nightly
 
@@ -33,5 +38,5 @@ script:
 after_success: |
  sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" -a "$TRAVIS_PHP_VERSION" != "hhvm-nightly" ]; then php vendor/bin/coveralls -v --config .coveralls.yml; fi;'
 
-notifications:
-    email: julienguyon@hotmail.com
+#notifications:
+#    email: julienguyon@hotmail.com
