--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,5 @@ script:
 after_success: |
  sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" -a "$TRAVIS_PHP_VERSION" != "hhvm-nightly" ]; then php vendor/bin/coveralls -v --config .coveralls.yml; fi;'
 
-#notifications:
-#    email: julienguyon@hotmail.com
+notifications:
+    email: julienguyon@hotmail.com
